--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ i.sidebarIcon {
     border-radius: 50%;
     margin: 50px auto 10px auto;
     padding: 8px 8px 12px 8px;
-    
+
 }
 
 aside ul {
@@ -74,6 +74,7 @@ a.navBut {
 
 a.navBut:hover {
     color: #ffffff;
+    text-shadow: 0px 0px 10px black ;
 }
 
 /**** CONTENT STYLE ****/
