Added background, updated sass files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header>
-    <h1>Jerrid Schilling</h1>
-    <ul>
+<header class="header-site">
+    <h1 class="header-title">JS</h1>
+    <ul class="header-nav">
         <li>About Me</li>
         <li>Education</li>
         <li>Work Experience</li>
