--- a/css/main.sass
+++ b/css/main.sass
@@ -6,8 +6,25 @@
 // Imports
 
 @import _colors
+@import _header
 
 // Styles
 
+*
+    margin: 0
+    padding: 0
+
 html
     background: $myBlue
+    
+.hero
+    background: url( "{{site.baseurl}}/assets/space.jpg" ) no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-background-size: cover
+    background-size: cover
+    height: 100vh
+    
+.hero-text
+    width: 100%
+    height: 100%
