--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -1,9 +1,9 @@
 .header-site
     color: white
     background: transparent
-    border-bottom: 1px solid black
     position: fixed
     width: 100%
+    padding: 10px
     
 .header-title
     text-align: left
@@ -20,3 +20,4 @@
         text-decoration: none
         list-style: none
         display: inline
+        line-height: inherit
