--- a/css/main.sass
+++ b/css/main.sass
@@ -26,5 +26,11 @@ html
     height: 100vh
     
 .hero-text
+    color: white
+    position: relative
+    top: 40vh
     width: 100%
     height: 100%
+    padding: auto
+    text-align: center
+    font-size: 2em
