Modified site style, added some assets

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,6 @@
         <li>Work Experience</li>
         <li>Projects</li>
         <li>Contact Me</li>
+        <li class="resume-cta">Resume</li>
     </ul>
 </header>
