--- a/_sass/_colors.sass
+++ b/_sass/_colors.sass
@@ -1,2 +1,15 @@
 // Color Variables to be used in page, import in main.sass with @import _colors
 $myBlue: deepskyblue
+
+// Color Pallet generated from hero image
+$lightGray: #b8b9b2
+$darkGray: #9b9a96
+$darkGreen: #3c3b36
+$white: #ffffff
+
+// Color Pallet generated from contact image
+$smokeWhite: #fbfafa
+$tan: #e6dbcb
+$peach: #c0896d
+$darkBlue: #131723
+$lightBlue: #384765
