--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,6 @@
     <title>{{ site.title }} | {{ page.title }}</title>
     <meta name="description" content="{{ site.description }}">
     
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 </head>
