--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -1,23 +1,32 @@
 .header-site
-    color: white
+    color: #555
     background: transparent
     position: fixed
+    z-index: 100
     width: 100%
-    padding: 10px
+    height: 60px
     
 .header-title
     text-align: left
     float: left
+    margin-left: 20px
     vertical-align: middle
-    line-height: inherit
+    line-height: 60px
 
 .header-nav
     text-align: right
     float: right
-    vertical-align: middle
-    line-height: inherit
+    margin-right: 20px
     li
         text-decoration: none
         list-style: none
         display: inline
-        line-height: inherit
+        margin-left: 30px
+        line-height: 60px
+        
+    .resume-cta
+        font-size: 1.2em
+        color: #f1f5f2
+        background: #6e7481
+        padding: 4px
+        border-radius: 2px
