--- a/css/main.sass
+++ b/css/main.sass
@@ -7,6 +7,7 @@
 
 @import _colors
 @import _header
+@import _footer
 
 // Styles
 
@@ -16,21 +17,66 @@
 
 html
     background: $myBlue
+    font-family: Arial
     
 .hero
-    background: url( "{{site.baseurl}}/assets/space.jpg" ) no-repeat center center
+    background: url( "{{ site.baseurl }}/assets/images/mountains.jpg" ) no-repeat center center fixed
     -webkit-background-size: cover
     -moz-background-size: cover
     -o-background-size: cover
     background-size: cover
     height: 100vh
+    position: relative
     
 .hero-text
-    color: white
-    position: relative
-    top: 40vh
-    width: 100%
-    height: 100%
-    padding: auto
+    color: #445
     text-align: center
-    font-size: 2em
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    
+    .hero-title
+        font-size: 8em
+
+    .hero-subtitle
+        font-size: 2em
+        
+.section-wrap
+    padding: 40px 20px
+    letter-spacing: 1px
+    text-align: center
+    
+    span
+        font-size: 1.6em
+        font-weight: bold
+        display: inline-block
+        margin-bottom: 40px
+        border-top: 1px solid
+        border-bottom: 1px solid
+    
+#about-me
+    background: $darkGreen
+    color: $tan
+    
+#education
+    background: $darkGray
+    color: $darkBlue
+    
+#work-experience
+    background: $tan
+    color: $darkBlue
+    
+#projects
+    background: $darkBlue
+    color: $tan
+    
+#contact-me
+    background: url( "{{ site.baseurl }}/assets/images/space.jpg" ) no-repeat center center fixed
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-background-size: cover
+    background-size: cover
+    height: 100vh
+    position: relative
+    color: $smokeWhite
