Updates to main site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,12 @@
 <header class="header-site">
     <h1 class="header-title">JS</h1>
     <ul class="header-nav">
-        <li>About Me</li>
-        <li>Education</li>
-        <li>Work Experience</li>
-        <li>Projects</li>
-        <li>Contact Me</li>
-        <li class="resume-cta">Resume</li>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#work-experience">Work Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact-me">Contact Me</a></li>
+        <li class="resume-cta">Resume</a></li>
     </ul>
 </header>
