--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -17,12 +17,23 @@
     text-align: right
     float: right
     margin-right: 20px
+    
     li
         text-decoration: none
         list-style: none
         display: inline
-        margin-left: 30px
+        margin-left: 24px
         line-height: 60px
+    
+    a
+        text-decoration: none
+        color: inherit
+        padding: 4px
+        
+    a:hover
+        border-radius: 2px
+        background: $darkGray
+        color: #f1f5f2
         
     .resume-cta
         font-size: 1.2em
