Adding more content

--- a/_sass/_colors.sass
+++ b/_sass/_colors.sass
@@ -1,5 +1,5 @@
 // Color Variables to be used in page, import in main.sass with @import _colors
-$myBlue: deepskyblue
+$mainBG: #fafaf8
 
 // Color Pallet generated from hero image
 $lightGray: #b8b9b2
