--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer class="footer-site">
     <span>Copyright &copy; 2016. Created by Jerrid Schilling.</span>
 </footer>
+
+<script type="text/javascript" src="{{ site.baseurl }}/js/bootstrap.js"></script>
