Housekeeping after adding bootstrap

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,6 @@
     <meta name="description" content="{{ site.description }}">
     
     <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 </head>
