--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     
     <title>{{ site.title }} | {{ page.title }}</title>
     <meta name="description" content="{{ site.description }}">
+    <meta name="author" content="{{ site.author }}">
     
     <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
