--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,26 @@
-<header class="header-site">
-    <h1 class="header-title">JS</h1>
-    <ul class="header-nav">
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">JS</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
         <li><a href="#hero">Home</a></li>
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#work-experience">Work Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact-me">Contact Me</a></li>
-        <li class="resume-cta">Resume</a></li>
-    </ul>
-</header>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
