--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">JS</a>
+      <a class="navbar-brand" href="">JS</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,6 +20,7 @@
         <li><a href="#work-experience">Work Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact-me">Contact Me</a></li>
+        <li><a href="{{ site.baseurl }}/assets/docs/Resume 2016 Jerrid Schilling.pdf" target="blank">Resume</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
