Changes to entire project, new format

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,9 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<header class="page-header">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="">JS</a>
+    <div class="row">
+      <div class="jumbotron col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+        <p class="row">Learning and Tinkering</p>
+      </div>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#about-me">About Me</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#work-experience">Work Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact-me">Contact Me</a></li>
-        <li><a href="{{ site.baseurl }}/assets/docs/Resume 2016 Jerrid Schilling.pdf" target="blank">Resume</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+  </div>
+</header>
