More style changes, added background

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="jumbotron col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-        <p class="row">Learning and Tinkering</p>
+        <p class="row text-center">Learning and Tinkering</p>
       </div>
     </div>
   </div>
