--- a/css/main.sass
+++ b/css/main.sass
@@ -11,6 +11,15 @@
 @import _bootstrap-overrides
 
 // Styles
+*
+    margin: 0
+    padding: 0
+
+.page-header
+    margin-top: 50px
+    background: url("{{ site.baseurl }}/assets/images/mountains.jpg") no-repeat center center fixed
+    height: 100vh
+
 #about-me
     background: $lightGray
     
