Adding more structure, more bootstrap

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,12 +16,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Education</a></li>
-            <li><a href="#">Work Experience</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact Me</a></li>
+            <li><a href="#home-anchor">Home</a></li>
+            <li><a href="#about-me-anchor">About Me</a></li>
+            <li><a href="#education-anchor">Education</a></li>
+            <li><a href="#work-experience-anchor">Work Experience</a></li>
+            <li><a href="#projects-anchor">Projects</a></li>
+            <li><a href="#contact-me-anchor">Contact Me</a></li>
             <li><a href="{{ site.baseurl }}/assets/docs/Resume 2016 Jerrid Schilling.pdf" target="blank">Resume</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
