--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
-<footer class="footer-site">
-    <span>Copyright &copy; 2016. Created by Jerrid Schilling.</span>
+<footer class="footer">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+        <p>Copyright &copy; 2016. Created by Jerrid Schilling.</p>          
+      </div>
+    </div>
+  </div>
 </footer>
