--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
-<header class="page-header">
+<header id="home" class="page-header">
+  <div id="home-anchor" class="hidden-anchor"></div>
   <div class="container-fluid">
     <div class="row">
-      <div class="jumbotron col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-        <p class="row text-center">Learning and Tinkering</p>
+      <div class="jumbotron vertical-center text-center col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+        <p class="jumbotron-title">Jerrid Schilling</p>
       </div>
     </div>
   </div>
