--- a/css/main.sass
+++ b/css/main.sass
@@ -6,19 +6,34 @@
 // Imports
 
 @import _variables
-@import _header
-@import _footer
 @import _bootstrap-overrides
 
 // Styles
-*
-    margin: 0
-    padding: 0
+
+// NAV
+
+.hidden-anchor
+    width: 0
+    height: 0
+    position: relative
+    top: -50px
+
+// HEADER
 
 .page-header
     margin-top: 50px
+    margin-bottom: 0
+    border: none
     background: url("{{ site.baseurl }}/assets/images/mountains.jpg") no-repeat center center fixed
+    height: 100%
     height: 100vh
+    
+.vertical-center
+    position: absolute
+    top: 50%
+    transform: translate(0%,-50%)
+
+// MAIN
 
 #about-me
     background: $lightGray
@@ -32,5 +47,10 @@
 #projects
     background: $tan
     
-#contact
+#contact-me
     background: $darkGreen
+    
+// FOOTER
+
+.footer p
+    margin: 20px 0
