Adding new content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div id="home-anchor" class="hidden-anchor"></div>
   <div class="container-fluid">
     <div class="row">
-      <div class="jumbotron vertical-center text-center col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+      <div class="well vertical-center text-center col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
         <p class="jumbotron-title">Jerrid Schilling</p>
       </div>
     </div>
