--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">Jerrid Schilling</a>
+          <a class="navbar-brand" href=""><span>Jerrid Schilling</span></a>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
