--- a/css/main.sass
+++ b/css/main.sass
@@ -48,9 +48,20 @@
     background: $tan
     
 #contact-me
-    background: $darkGreen
+    background: url("{{ site.baseurl }}/assets/images/space.jpg") no-repeat center center fixed
+    height: 100%
+    height: 100vh
+    
+.contact-well
+    background: rgb(19,23,35)
+    background: rgba(19,23,35,0.5)
     
 // FOOTER
 
 .footer p
     margin: 20px 0
+    
+// MEDIA QUERIES
+@media (max-width: 992px)
+    .navbar-brand
+        content: none
