--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a href="{{ site.basurl }}/content/docs/Resume2016JerridSchilling.pdf" target="_blank" rel="noopener noreferrer" class="page-scroll resume-cta">Resume</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -46,7 +49,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">My name is Jerrid Schilling and I like to code</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Learn More</a>
+                <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
             </div>
         </div>
     </header>
