--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   {% include head.html %}
 
@@ -9,10 +9,9 @@
     {% include header.html %}
     {% include about.html %}
     {% include portfolio_grid.html %}
+    {% include education.html %}
+    {% include work-experience.html %}
     {% include contact.html %}
-    {% include team.html %}
-    {% include clients.html %}
-    {% include services.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
