Updated css to fix email link not resizing properly. Added new work experience. Added smaller portrait image to reduce asset size.

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,8 +10,8 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h3 class="text-muted">Jerrid Schilling</h3>
                 <h3 class="text-muted">Software Engineer</h3>
-                <h3 class="text-muted">Cheyenne, WY</h3>
-                <h3 class="text-muted"><a href="mailto:jerrid.schilling@outlook.com">jerrid.schilling@outlook.com</a></h3>
+                <h3 class="text-muted">Fort Collins, CO</h3>
+                <h3 class="text-muted resize-link"><a href="mailto:jerrid.schilling@outlook.com">jerrid.schilling@outlook.com</a></h3>
                 <br>
                 <h3 class="text-muted">Or click one of the social media links to get in touch with me...</h3>
             </div>
