--- a/_includes/work-experience.html
+++ b/_includes/work-experience.html
@@ -12,20 +12,35 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/logos/brightbeanlogo.jpg" alt="The logo for BrightBean, LLC.">
+                                <img class="img-circle img-responsive" src="img/logos/encompasslogo.jpg" alt="The logo for Encompass Technologies.">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Sep. 2016-Present</h4>
-                                    <h4 class="subheading">BrightBean, LLC - Denver, CO</h4>
-                                    <h4 class="subheading">Remote Software Developer</h4>
+                                    <h4>Dec. 2016-Present</h4>
+                                    <h4 class="subheading">Encompass Technologies - Fort Collins, CO</h4>
+                                    <h4 class="subheading">Software Developer/EDI Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Began working as a remote developer, working on a variety of projects ranging from WordPress to ASP.NET MVC applications. Developing these projects on Windows and Linux, all work is tested in a multitude of browsers to ensure compatibility. I am quickly gaining a better understanding of development with WordPress as well as ASP.NET MVC.</p>
+                                    <p class="text-muted">As a Software Developer, I worked on the Invoicing Team fixing bugs, writing and testing new features, and helping plan for upcoming releases. Within 6 months, I transitioned into a newly created EDI Engineer position to work on setting up EDI connections between our customers and their trading partners. I work daily on testing maps, setting up and testing connections, and working with customers to ensure the data interchange operates smoothly.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/logos/brightbeanlogo.jpg" alt="The logo for BrightBean, LLC.">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Sep. 2016-Jan. 2017</h4>
+                                    <h4 class="subheading">BrightBean, LLC - Denver, CO</h4>
+                                    <h4 class="subheading">Remote Software Developer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Began working as a remote developer, working on a variety of projects ranging from WordPress to ASP.NET MVC applications. Developing these projects on Windows and Linux, all work is tested in a multitude of browsers to ensure compatibility. I quickly gained a better understanding of development with WordPress as well as ASP.NET MVC.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/logos/hfclogo.jpg" alt="The logo for HollyFrontier Corp.">
                             </div>
@@ -40,7 +55,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/logos/acehardwarelogo.jpg" alt="The logo for Ace Hardware.">
                             </div>
@@ -55,7 +70,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/logos/archcoallogo.jpg" alt="The logo for Arch Coal, Inc.">
                             </div>
