--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -3,6 +3,11 @@
     background-color: #fed136;
 }
 
+#i-like-to {
+    color: #fed136;
+    text-shadow: 0 0 8px black;
+}
+
 #education {
     background-color: #222;
     background-image: url({{ site.baseurl }}/img/graduation.png);
@@ -13,6 +18,13 @@
 
 #education .section-heading {
     color: #fff;
+}
+
+.btn-xl:active, .btn-xl:focus {
+    color: #000;
+}
+.btn-xl:hover {
+    color: #FFF;
 }
 
 @media only screen and (max-width: 530px) {
