--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">My name is Jerrid Schilling and I like to code</div>
+                <div class="intro-lead-in">My name is Jerrid Schilling and I like to <span id="i-like-to">code</span></div>
                 <div class="intro-heading">It's Nice To Meet You</div>
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
             </div>
