Changed the about me section.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p class="large text-muted">Born in Colorado and raised in Wyoming, I have a strong love of the outdoors. However, my other passions for building, creating, and fixing can be attributed to my family. In high school I began learning to write software and after a short diversion in college, I returned to my passion for software development. On personal and school related projects I have near 10 years of experience and I've developed professionally for about 1 1/2 years. I regularly attend volunteer software development meetups, read development related blogs and listen to some pretty awesome developer podcasts. I'm constantly trying to expand my experience and I'm very eager to learn.</p>
+                <p class="large text-muted">Born in Colorado and raised in Wyoming, I have a strong love of the outdoors. However, my other passions for building, creating, and fixing can be attributed to my family. In high school I began learning to write software and after a short diversion in college, I returned to my passion for software development. On personal and school related projects I have near 10 years of experience and I've developed professionally for about 2 years. I regularly attend volunteer software development meetups, read development related blogs and listen to some pretty awesome developer podcasts. I'm constantly trying to expand my experience and I'm very eager to learn.</p>
             </div>
         </div>
     </div>
