Update work experience

--- a/_includes/work-experience.html
+++ b/_includes/work-experience.html
@@ -10,18 +10,33 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/logos/brightbeanlogo.jpg" alt="The logo for BrightBean, LLC.">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Nov. 2018-Present</h4>
+                                    <h4 class="subheading">Apollo Enterprise Imaging - Fort Collins, CO</h4>
+                                    <h4 class="subheading">Mobile Application Software Developer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">I worked on a variety of projects in the medical imaging field, mostly front end development utilizing Angular, SASS, and HTML. For the mobile projects, I utillize Cordova and Ionic frameworks to meet the requirements of the Product and Sales teams. I have also taken the initiative to be the lead of testing with the Test Rail application.</p>
+                                </div>
+                            </div>
+                        </li>
                         <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/logos/encompasslogo.jpg" alt="The logo for Encompass Technologies.">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Dec. 2016-Present</h4>
+                                    <h4>Dec. 2016-Nov. 2018</h4>
                                     <h4 class="subheading">Encompass Technologies - Fort Collins, CO</h4>
-                                    <h4 class="subheading">Software Developer/EDI Engineer</h4>
+                                    <h4 class="subheading">Software Developer/EDI Analyst</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">As a Software Developer, I worked on the Invoicing Team fixing bugs, writing and testing new features, and helping plan for upcoming releases. Within 6 months, I transitioned into a newly created EDI Engineer position to work on setting up EDI connections between our customers and their trading partners. I work daily on testing maps, setting up and testing connections, and working with customers to ensure the data interchange operates smoothly.</p>
+                                    <p class="text-muted">As a Software Developer, I worked on the Invoicing Team fixing bugs, writing and testing new features, and helping plan for upcoming releases. Within 6 months, I transitioned into a newly created EDI Analyst position to work on setting up EDI connections between our customers and their trading partners. I work daily on testing maps, setting up and testing connections, and working with customers to ensure the data interchange operates smoothly.</p>
                                 </div>
                             </div>
                         </li>
