--- a/_includes/work-experience.html
+++ b/_includes/work-experience.html
@@ -12,7 +12,7 @@
                     <ul class="timeline">
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/logos/brightbeanlogo.jpg" alt="The logo for BrightBean, LLC.">
+                                <img class="img-circle img-responsive" src="img/logos/apollo.png" alt="The logo for Apollo Enterprise Imaging, Corp.">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
